...
                                                        </constraints>
                                                    </imageView>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="nativeName" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ts4-Xk-hax" userLabel="nativeNameL
                                                        <rect key="frame" x="62" y="17" width="91" height="20"/>
                                                        <fontDescription key="fontDescription" name="Roboto-Medium" family="Roboto" pointSize="17"/>
...
                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="LANGUAGES" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KVO-Ir-o7T" userLabel="Lang
                                                                <rect key="frame" x="58" y="0.0" width="242" height="11"/>
                                                                <accessibility key="accessibilityConfiguration" identifier="languagesLabel"/>
                                                                <fontDescription key="fontDescription" type="system" pointSize="9"/>
                                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                                                <nil key="highlightedColor"/>
                                                            </label>
                                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="forwardArrow" translatesAutoresizingMaskIntoConstraints="NO" id="EnW-3k-XXn">
                                                                <rect key="frame" x="125" y="23" width="16" height="16"/>
                                                                <constraints>
...
                                                                <nil key="highlightedColor"/>
                                                            </label>
                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Neighbouring countries" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="IQj-Vj-aEE" use
                                                                <rect key="frame" x="60" y="21" width="200" height="19"/>
                                                                <constraints>
...
                                                    <outlet property="borderLabel" destination="IQj-Vj-aEE" id="g24-lb-ok0"/>
                                                    <outlet property="borderTitle" destination="Qm9-l8-1fy" id="5UD-Mk-XnM"/>
                                                    <outlet property="bordersView" destination="fag-rh-Z01" id="Zi0-yN-Utp"/>
                                                    <outlet property="capitalLabel" destination="9Pa-17-oNe" id="gtM-hC-nK3"/>
                                                    <outlet property="capitalTitle" destination="x43-ft-1AR" id="Q1v-gs-COB"/>
...
                                                    <outlet property="regionLabel" destination="Wpa-mf-axb" id="hRA-j5-by5"/>
                                                    <outlet property="regionTitle" destination="RDR-hg-9bk" id="2MJ-bs-c1I"/>
                                                    <outlet property="regionView" destination="mD7-Kz-aXB" id="wnm-yb-KR3"/>
                                                    <outlet property="separator" destination="uhc-Pb-aY5" id="Qkg-wJ-dOU"/>
                                                </connections>
...
                        </variation>
                        <connections>
                            <outlet property="capitalCityView" destination="Ul7-pH-Drh" id="Qou-Vr-5HL"/>
                            <outlet property="contentView" destination="Na9-7J-rv6" id="fhx-i3-fMU"/>
                            <outlet property="countryDetailsView" destination="8CJ-C8-MuF" id="UEr-ck-QS2"/>
                            <outlet property="neighbouringCountriesView" destination="TEp-8m-dfE" id="hoM-yk-Tdq"/>
                            <outlet property="neighbouringCountriesViewHeightConstr" destination="kS9-uE-QN1" id="wHV-Td-fxf"/>
                            <outlet property="regionDetailView" destination="0Hx-6h-S7G" id="z6o-qQ-nr1"/>
                            <outlet property="regionDetailViewHeightConstr" destination="hWs-ER-HX6" id="zqF-OY-1FV"/>
                            <outlet property="scrollView" destination="e4d-WO-bT3" id="vSZ-sD-7fh"/>
...
