...
    fileprivate let topOffset = CGPoint(x: 0,  y: 0)
    fileprivate var bottomOffSet: CGPoint {
        return CGPoint(x: 0, y: countryDetailsView.bounds.size.height)
    }

    private func setAccessibilityIdentifiers() {
        accessibilityIdentifier = "countryDetailsRootView"
        countryDetailsView.accessibilityIdentifier = "countryDetailsView"
        capitalCityView.accessibilityIdentifier = "capitalCityView"
        regionDetailView.accessibilityIdentifier = "regionDetailView"
        neighbouringCountriesView.accessibilityIdentifier = "borderingCountriesTableView"
    }
}

extension CountryDetailsRootView: BorderingCountriesTableViewDelegate {

    func viewDidSelectCountry(countryName: String) {
...
