...
        return viewModel
    }()

    override func viewDidLoad() {
        super.viewDidLoad()
        navigationController?.navigationBar.titleTextAttributes = [NSAttributedStringKey.foregroundColor: Colors.standardBlue, NSAttributedStringKey.font: StyleManager.Fonts().titleLarge]
        title = "Countries"
        rootView.setUpView()
        rootView.delegate = self
        viewModel.loadData()
    }

    // MARK: - Navigation
...
